getting bearer token